// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch should have the correct default styles 1`] = `
.circuit-2 {
  margin: 0;
  padding: 0;
  border: 0;
  outline: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-flex: 0 0 40px;
  -ms-flex: 0 0 40px;
  flex: 0 0 40px;
  background-color: #E6E6E6;
  border-radius: 24px;
  position: relative;
  -webkit-transition: background-color 200ms ease-in-out;
  transition: background-color 200ms ease-in-out;
  height: 24px;
  width: 40px;
  overflow: visible;
  cursor: pointer;
}

.circuit-2:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-2:focus::-moz-focus-inner {
  border: 0;
}

.circuit-0 {
  display: block;
  background-color: #FAFBFC;
  box-shadow: 0 2px 0 0 #999999;
  position: absolute;
  top: 50%;
  -webkit-transform: translate3d(4px,-50%,0);
  -ms-transform: translate3d(4px,-50%,0);
  transform: translate3d(4px,-50%,0);
  -webkit-transition: box-shadow 200ms ease-in-out,-webkit-transform 200ms ease-in-out;
  -webkit-transition: box-shadow 200ms ease-in-out,transform 200ms ease-in-out;
  transition: box-shadow 200ms ease-in-out,transform 200ms ease-in-out;
  height: 16px;
  width: 16px;
  border-radius: 16px;
}

.circuit-1 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<button
  aria-checked="false"
  class="circuit-2"
  role="switch"
  type="button"
>
  <span
    class="circuit-0"
  />
  <span
    class="circuit-1"
  >
    off
  </span>
</button>
`;

exports[`Switch should have the correct on styles 1`] = `
.circuit-1 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-2 {
  margin: 0;
  padding: 0;
  border: 0;
  outline: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-flex: 0 0 40px;
  -ms-flex: 0 0 40px;
  flex: 0 0 40px;
  background-color: #E6E6E6;
  border-radius: 24px;
  position: relative;
  -webkit-transition: background-color 200ms ease-in-out;
  transition: background-color 200ms ease-in-out;
  height: 24px;
  width: 40px;
  overflow: visible;
  cursor: pointer;
  background-color: #3063E9;
}

.circuit-2:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-2:focus::-moz-focus-inner {
  border: 0;
}

.circuit-0 {
  display: block;
  background-color: #FAFBFC;
  box-shadow: 0 2px 0 0 #999999;
  position: absolute;
  top: 50%;
  -webkit-transform: translate3d(4px,-50%,0);
  -ms-transform: translate3d(4px,-50%,0);
  transform: translate3d(4px,-50%,0);
  -webkit-transition: box-shadow 200ms ease-in-out,-webkit-transform 200ms ease-in-out;
  -webkit-transition: box-shadow 200ms ease-in-out,transform 200ms ease-in-out;
  transition: box-shadow 200ms ease-in-out,transform 200ms ease-in-out;
  height: 16px;
  width: 16px;
  border-radius: 16px;
  box-shadow: 0 2px 0 0 #234BC3;
  -webkit-transform: translate3d( calc(40px - 16px - 4px), -50%, 0 );
  -ms-transform: translate3d( calc(40px - 16px - 4px), -50%, 0 );
  transform: translate3d( calc(40px - 16px - 4px), -50%, 0 );
}

<button
  aria-checked="true"
  class="circuit-2"
  role="switch"
  type="button"
>
  <span
    class="circuit-0"
  />
  <span
    class="circuit-1"
  >
    on
  </span>
</button>
`;
